Fix register img on mobile

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -476,7 +476,6 @@ select option {
 }
 
 .search-img-box {
-    width: 100%;
     position: relative;
     margin-left: 0;
     margin-right: 0;
